--- a/main.html
+++ b/main.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
 
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<div class="container">
+		<div class="left">
+			<div class="f1">
+				<img src="" alt="profilr-pic">
+				<p><b>Name:</b>&nbsp; Shubham Bhola</p>
+			</div>
+		</div>
+		<div class="right"></div>
+	</div>
+	
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
+</html>
