--- a/main.html
+++ b/main.html
@@ -10,8 +10,29 @@
 	<div class="container">
 		<div class="left">
 			<div class="f1">
-				<img src="" alt="profilr-pic">
-				<p><b>Name:</b>&nbsp; Shubham Bhola</p>
+				<img src="https://cdn.pixabay.com/photo/2023/02/04/09/20/castle-7766794_960_720.jpg" alt="profilr-pic">
+				<div class="fl">
+					<table>
+					<tr>
+						<th>Name:</th>
+						<td>
+							Shubham Bhola
+						</td>
+					</tr>
+					<tr>
+						<th>Profile:</th>
+						<td>
+							Software Developer
+						</td>
+					</tr>
+					<tr>
+						<th>Email:</th>
+						<td>
+							abcd@gmail.com
+						</td>
+					</tr>
+				</table>
+				</div>
 			</div>
 		</div>
 		<div class="right"></div>
